Finished simple cards functionality with small test in Deck class