@@ -5,10 +5,11 @@ import java.util.Collections;
 import java.util.Random;
 
 public class Deck {
-    private ArrayList<Card> cards;
+    private final ArrayList<Card> cards;
 
     public Deck(ArrayList<Card> cards) {
         this.cards = cards;
+        deckInit();
     }
 
     public void shuffle() {
@@ -19,11 +20,22 @@ public class Deck {
         }
     }
 
-    public Card drawCard() {
+    // Initialization of our deck (we add all 17 cards including 1 Joker)
+    private void deckInit(){
+        cards.clear();
+        for  (Suit suit : Suit.values()) {
+            for (Faces face : Faces.values()) {
+                cards.add(new SuitCard(false, suit, face));
+            }
+        }
+        cards.add(new Joker(false));
+        shuffle();
+    }
+    public Card dealCard() {
         if (cards.isEmpty()) {
             throw new IllegalStateException("Le deck est vide");
         }
-        return cards.remove(cards.size() - 1);
+        return cards.removeLast();
     }
 
     public Card[] chooseTrophees(int count) {
@@ -32,16 +44,50 @@ public class Deck {
         }
         Card[] trophees = new Card[count];
         for (int i = 0; i < count; i++) {
-            trophees[i] = drawCard();
+            trophees[i] = dealCard();
         }
         return trophees;
     }
 
-    public int getRemainCount() {
+    public ArrayList<Card> chooseTrophies(int playerCount) {
+        ArrayList<Card> trophies = new ArrayList<>();
+        int trophiesCount = (playerCount == 3) ? 2 : 1;
+            for (int i = 0;  i < trophiesCount; i++) {
+                Card trophy = dealCard();
+                trophy.setTrophy(true);
+                trophies.add(trophy);
+            }
+        return trophies;
+    }
+
+    public int getRemainingCount() {
         return cards.size();
     }
 
     public boolean isEmpty() {
         return cards.isEmpty();
     }
+
+
+
+
+
+    // functions test
+    public static void main(String[] args) {
+        Deck deck = new Deck(new ArrayList<>());
+        System.out.println("Deck has " + deck.getRemainingCount() + " cards.");
+
+        ArrayList<Card> trophies = deck.chooseTrophies(3);
+        System.out.println("Chosen trophies:");
+        trophies.forEach(System.out::println);
+        System.out.println("\n");
+        for (Card card : deck.cards) {
+            System.out.println(card);
+        }
+
+        Card card = deck.dealCard();
+        System.out.println("Card given: " + card);
+        System.out.println("Cards left in the deck: " + deck.getRemainingCount());
+    }
+
 }
